--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -1,8 +1,17 @@
 Components
 - Page [x]
-  - Get public data
+  - Get public data [x]
+  - Route passes id to page [x]
+  - Edit button [x]
+  - Refresh on change focus [x]
 - Tree []
-- Search []
+  - Static
+    - heroicons?
+  - Recursive request
+  - Recursive react component
+- Deploy
+- Search? []
+
 
 Dev
 - Setup tsc check
