--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -12,16 +12,7 @@ Components
 - Get signals working [x]
 - Tree v2 []
   - folder shows children [x]
-  - Prev/next
-- Search []
+  - Prev/next [x]
+  - Keyboard shortcut [x]
 - Deploy []
 
-
-
-Dev
-- Setup tsc check
-
-Bonus
-- Get signals working?
-  - Get a super basic example working []
-  - Build up from there []
