rm custom element, fix for images in development

--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -20,6 +20,7 @@ Components
 - Send email [x]
 - Deploy [x]
 
+- Add an example that uses movies or files []
 - Open new branch, add comments to code []
 - Record yourself doing it []
 
