--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -1,26 +1,4 @@
-Components
-- Page [x]
-  - Get public data [x]
-  - Route passes id to page [x]
-  - Edit button [x]
-  - Refresh on change focus [x]
-- Tree [x]
-  - Single request [x]
-  - Recursive request [x]
-  - Icons [x]
-- tsc [x]
-- Get signals working [x]
-- Tree v2 []
-  - folder shows children [x]
-  - Prev/next [x]
-  - Keyboard shortcut [x]
-- Clean up git history [x]
-- Updates slides [x]
-- render iframe [x]
-- Send email [x]
-- Deploy [x]
-
-- Add an example that uses movies or files []
-- Open new branch, add comments to code []
-- Record yourself doing it []
-
+- Create a branch that only has comments and types []
+- Build app x3 []
+- Record building app []
+- Think of tough questions and write out answers []
