--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -1,4 +1,6 @@
+- Finish watching video [x]
 - Create a branch that only has comments and types []
-- Build app x3 []
-- Record building app []
-- Think of tough questions and write out answers []
+  - Set up a commit to check out in case you miss anything []
+- Remove warning message on youneedawiki.com [x]
+- Build app x1 []
+- Think of some tough questions and write out answers []
