--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -1,4 +1,5 @@
-- test moving to react
-- Default cache working
-- set up tailwind
+- move to react and https://www.npmjs.com/package/@preact/signals-react
 - tests with bun
+- test out tailwind
+- test out ariakit
+
