--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -1,3 +1,6 @@
+- get react compiler working [x]
+  - see if you can get it working [x]
+  - disable for static tree []
 - write tests with bun
 - try out tailwind - build a small component
 - try out ariakit - build a small component
