--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -2,8 +2,9 @@
   - see if you can get it working [x]
   - disable for static tree [x]
 - move to typescript [x]
+- create useFile hook [x]
+- figure out why useFile is not caching files [x]
 - write tests with bun []
+- add no floating promise
 - try out ariakit - build a small component
 - try out tailwind - build a small component
-
-
