--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -7,12 +7,12 @@
 - get compiler working [x]
 - add eslint/no floating promise [x]
 - write tests with bun [x]
-- try out ariakit - build a small component
-- try out tailwind - build a small component
-- set up vanilla extract
-- set up a separate branch in youneedawiki, copy over these files
-- setup auth so it is called in main, hooks no longer need loaded
-- create components
+- try out ariakit - build a small component []
+- try out tailwind - build a small component []
+- set up vanilla extract []
+- set up a separate branch in youneedawiki, copy over these files []
+- setup auth so it is called in main, hooks no longer need loaded []
+- create components []
   - title
   - last modified
   - breadcrumbs
@@ -23,4 +23,4 @@
   - icon
   - static tree
   - page
-- migrate changes to youneedawiki
+
